--- a/src/main/resources/static/smstest.html
+++ b/src/main/resources/static/smstest.html
@@ -133,14 +133,13 @@
 <button id="submit">인증번호 받기</button>
 
 <!-- initially hidden -->
-<div id="verification" style="display: none;">
+<div id="verification">
     <label for="inputNum">인증번호:</label><br>
     <input type="text" id="inputNum" placeholder="Enter the verification number" required><br>
     <button id="verify">인증 확인</button>
 </div>
 
-<!-- initially hidden -->
-<button id="register" style="display: none;">회원가입 완료</button>
+<button id="register">회원가입 완료</button>
 
 <!-- 로그인 섹션 -->
 <h1>로그인</h1>
